tickets page updated
