# CegCRMAPI/CegCRMClient/src/types/ticket.ts
@@ -1,16 +1,25 @@
+export enum TicketStatus {
+  Open = 0,
+  InProgress = 1,
+  Resolved = 2,
+  Closed = 3
+}
+
 export interface Ticket {
   id: string;
   customerId: string;
-  assignedEmployeeId: string | null;
-  status: string;
   description: string;
-  solution: string;
+  aiSuggestedSolution: string | null;
+  finalSolution: string | null;
+  status: TicketStatus;
+  assignedEmployeeId: string | null;
 }
 
 export interface CreateTicket {
   customerId: string;
   assignedEmployeeId: string | null;
-  status: string;
+  status: TicketStatus;
   description: string;
-  solution: string;
+  aiSuggestedSolution?: string;
+  finalSolution?: string;
 } 
